<?xml version="1.0"?>

<package format="2">
  <name>potagerkeeper</name>
  <version>0.0.1</version>
  <description>The ultimate potager keeper robot package!</description>

  <maintainer email="caabordagi@unal.edu.co">Camilo Borda</maintainer>
  <maintainer email="dafdiazco@unal.edu.co">Daniel Diaz</maintainer>
  <maintainer email="afriverat@unal.edu.co">Felipe Rivera</maintainer>

  <license>BSD</license>

  <author email="caabordagi@unal.edu.co">Camilo Borda</author>
  <author email="dafdiazco@unal.edu.co">Daniel Diaz</author>
  <author email="afriverat@unal.edu.co">Felipe Rivera</author>
  
  <!-- DEPENDENCES -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- EXPORT -->

  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_media_path ="${prefix}/worlds"/>
  </export>
  
</package>